frontend_tests/negative/return_count/cmd/app/main.go
package main

func value() int { return }
func main()      { _ = value() }
